apps/shiori/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shiori
  labels:
    enable-reloader-operator-watching: "true"
