apps/shiori/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shiori
  labels:
    app: shiori
  annotations:
    secret.reloader.stakater.com/reload: "shiori-env-secret"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shiori
  template:
    metadata:
      labels:
        app: shiori
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: shiori
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: app
          persistentVolumeClaim:
            claimName: shiori-data
      containers:
        - name: shiori
          image: ghcr.io/go-shiori/shiori:v1.8.0
          imagePullPolicy: IfNotPresent
          command: ["/usr/bin/shiori", "server"]
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - mountPath: /srv/shiori
              name: app
