apps/shiori/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: shiori
  name: shiori
spec:
  selector:
    app: shiori
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  type: ClusterIP
