apps/shiori/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shiori-httproute
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Other
    gethomepage.dev/name: Shiori
    gethomepage.dev/href: "https://shiori.home.alden.ai"
    gethomepage.dev/description: Bookmark Manager
    gethomepage.dev/icon: shiori.svg
    gethomepage.dev/app: shiori # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/pod-selector: app=shiori
spec:
  parentRefs:
  - name: default-https-gateway
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - shiori.home.alden.ai
  rules:
  - backendRefs:
    - name: shiori
      port: 8080
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
